--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "daisyui": "^2.47.0",
     "next": "13.1.2",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
+    "react-currency-conv": "^1.1.0",
     "react-dom": "18.2.0",
     "zod": "^3.20.2"
   },
