--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "daisyui": "^2.47.0",
     "next": "13.1.2",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-currency-conv": "^1.1.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.42.1",
     "zod": "^3.20.2"
   },
   "devDependencies": {
