--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
+    "axios": "^1.2.4",
     "daisyui": "^2.47.0",
     "next": "13.1.2",
     "next-themes": "^0.2.1",
