📝 update .env.example for API Fetching

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@
 # If you are cloning this repo, create a copy of this file named `.env` and populate it with your secrets.
 
 # When adding additional env variables, the schema in /env/schema.mjs should be updated accordingly
-# Example:
-# SERVERVAR=foo
-# NEXT_PUBLIC_CLIENTVAR=bar
+
+
+# API for fetching hotels
+NEXT_PUBLIC_API_ENDPOINT="/api/hotels"
+# API for fetching hotels (Mockup server postman)
+# NEXT_PUBLIC_API_ENDPOINT="https://69b0b287-b68c-4ea1-8e28-7cd43b40f413.mock.pstmn.io/hotels/"
